reports: changed icon to svg (to prevent blurring from scaling) and minor css fix

--- a/public/css/runreports.css
+++ b/public/css/runreports.css
@@ -42,9 +42,10 @@ thead {
 
 /* Check box Icon */
 .checkbox{
-    height: 1em;
+    height: 1.2em;
     margin: 0;
     padding-left: 0px;
+    cursor: pointer;
 }
 
 .table-checkbox {
